Changes for 4.2.5rc1

New features:
..F....PS. [ZBXNEXT-5176,ZBXNEXT-5205] blocked zero item history/trends period being overridden by global configuration (miks, wiper)

Bug fixes:
..F....... [ZBX-16280] fixed when Plain Text Widgets do not display as HTML when option is selected (vasilijs)
A.F....... [ZBX-16012] fixed confusing error message "Cannot read JSON." in HTTP agent item (vasilijs)
.......PS. [ZBX-16263] fixed preprocessing step history is not reset when "on fail" "set value" action triggers (akozlovs)
.......PS. [ZBX-16270] fixed memory leak in IPC service when queueing multiple messages to client (akozlovs)
...G...... [ZBX-15962] added mounted filesystems to vfs.fs.discovery of windows agent (asestakovs)
..F....... [ZBX-16153] fix 500 Internal Server Error when trying to preview pie/exploded graph without items (rlataria)
..F....... [ZBX-16204] fix undefined offset in CControllerWidgetProblemHostsView (rlataria)

--------------------------------------------------------------------------------
Changes for 4.2.4

4.2.4rc2 was released as 4.2.4 without any changes

--------------------------------------------------------------------------------
Changes for 4.2.4rc2

Bug fixes:
...G...PS. [ZBX-15827] fixed Windows agent build (wiper)

--------------------------------------------------------------------------------
Changes for 4.2.4rc1

New features:
..F.....S. [ZBXNEXT-5124,ZBX-15827] extended preprocessing steps with final result row; improved input validation in preprocessing steps (miks, wiper)
.......PS. [ZBXNEXT-2880] added access to vmware datastore at vmware vCenter level (MVekslers)
..F....... [ZBXNEXT-5163] added display of maintenance information in Configuration section for hosts in maitenance (vasilijs)
..F....... [ZBXNEXT-5036] added preloader for popup menus (ashubin)
...G...... [ZBXNEXT-287] added SSL support for agent HTTP checks (asestakovs)